=========
CHANGELOG
=========

2.0.1 (unreleased)
==================

- Fix usage of simplify.
- Expose ``force2d`` option in view

2.0.0 (2013-07-09)
==================

- Complete rewrite using @jeffkistler and @glenrobertson code
- CRS is added to GeoJSON ouput by default
- Ability to build ``pk`` dynamically by passing a lambda
- Ability to provide a ``bbox``
- Ability to use Django natural keys
- Support of *ValuesQuerySet*
- Support of *ForeignKey* and *ManyToMany*
- Added ``force2d`` option

** Backwards incompatible changes **

- Geom field is not guessed automatically : Use ``geometry_field`` option, default is ``'geom'``.
- no more ``pk`` in properties : use feature ``id``, or list ``pk`` in properties explicitly.
- ``fields`` list in ``GeoJSONLayer`` was renamed ``properties``.

1.2.0 (2013-05-22)
==================

- Shapely is now optional (used for deserialization only)
- Add Django to requirements
- Skip a step in GeoJSON conversion of geometries (fixes #6)


1.1.0 (2013-03-06)
==================

- Django 1.5 support
- Fix template tag geojsonfeature on empty geometries

1.0.0 (2012-08-03)
==================

- Initial working version.